fixed scrollbar issue. can now trigger animations based on scrollbar position

--- a/public/nanny.css
+++ b/public/nanny.css
@@ -16,11 +16,45 @@ footer{
   left: 8px;
   /*display: none;*/
 }
+.wrapper {
+	height: 100vh;
+	/*overflow-y: hidden;*/
+	overflow-x: auto;
+	perspective: 2px;
+	width: 100%
+}
+
+.section {
+	/* Needed for children to be absolutely positioned relative to the parent. */
+	position: relative;
+	height: 100vh;
+	width: 100%;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	color: white;
+	text-shadow: 0 0 5px #000;
+}
+/* Move the pseudo-element back away from the camera,
+ * then scale it back up to fill the viewport.
+/* Force the background image to fill the whole element. */
+.parallax::after {
+	/* Display and position the pseudo-element */
+	content: " ";
+	position: absolute;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	left: 0;
+	background-size: 100%;
+	z-index: -1;
+	transform: translateZ(-1px) scale(1.5);
+}
 
 #scene_container{
 	width: 100%;
 	height: 100%;
-  /*overflow-x: auto;*/
+  overflow-x: auto;
 	white-space: normal;
 
 }
@@ -134,6 +168,7 @@ footer{
 	animation: nanny_move 3s;
 	transition-timing-function: ease-in-out;
 	animation-fill-mode: forwards;
+	animation-play-state: paused;
 }
 @keyframes nanny_move{
 	100%{
@@ -233,40 +268,6 @@ footer{
   /* The height needs to be set to a fixed value for the effect to work.
    * 100vh is the full height of the viewport. */
   /*Set the perspective to 2px. This is essentailly the simulated distance from the viewport to transformed objects.*/
-  .wrapper {
-    height: 100vh;
-    /*overflow-y: hidden;*/
-    overflow-x: auto;
-    perspective: 2px;
-		width: 100%
-  }
-
-  .section {
-    /* Needed for children to be absolutely positioned relative to the parent. */
-    position: relative;
-    height: 100vh;
-		width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: white;
-    text-shadow: 0 0 5px #000;
-  }
-  /* Move the pseudo-element back away from the camera,
-   * then scale it back up to fill the viewport.
-  /* Force the background image to fill the whole element. */
-  .parallax::after {
-    /* Display and position the pseudo-element */
-    content: " ";
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    background-size: 100%;
-    z-index: -1;
-    transform: translateZ(-1px) scale(1.5);
-  }
 
   /* The styling for the static div. */
   /*.static {
